javascriptAndCss/stats.css
* {
  margin:0;
}

body {
	position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
	min-width: 1080px;
	min-height: 900px;
}

#logo{
	margin-left:10px;
}

#choiceDiv {
	position:absolute;
	top: 0;
	bottom: 0;
	left: 0;
	color: white;
	width: 370px;
	background-color: #004A99;
}

#contentDiv {
	position: absolute;
	top: 0;
	bottom: 0;
	right: 0;
	left: 370px;
	padding-left: 5px;
	height: inherit;
	overflow-y: auto;
}

#choiceChart{
	margin-top: 50px;
}

#midScroll{
	overflow: initial;
}

#charts{
	margin: 10px;
}

#charts > * {
	margin-bottom: 10px;
}

ul {
	margin-top: 10px;
}

#svgDiv{
	overflow-x: auto;
}


.axis text {
    font-family: sans-serif;
    font-size: 11px;
}

.axis path, .axis line{
		fill: none;
		stroke: white;
		shape-rendering: crispEdges;
}

/* SELECTION  */

.brush .extent {
    stroke: #0DFFFC;
    fill-opacity: .125;
    shape-rendering: crispEdges;
}

/* BUTTONS */
.buttons {
	display: flex;
    padding-bottom: 20px;
    clear: both;
}
.button {
    color: #6e6e6e;
    padding: 0px 12px;
    position: relative;
    display: inline;
    background: #f3f3f3;
    background: -webkit-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
    background: -moz-linear-gradient(linear,0% 40%,0% 70%,from(#F5F5F5),to(#F1F1F1));
    border: solid 1px #dcdcdc;
    border-radius: 2px;
    -webkit-border-radius: 2px;
    -moz-border-radius: 2px;
    margin-right: 10px;
}
.button:hover {
    color: #333;
    border-color: #999;
    -moz-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.2); 
	-webkit-box-shadow:0 2px 5px rgba(0, 0, 0, 0.2);
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
}
.button:active {
    color: #000;
    border-color: #444;
}
.left {
    -webkit-border-top-right-radius: 0;
    -moz-border-radius-topright: 0;
    border-top-right-radius: 0;
    -webkit-border-bottom-right-radius: 0;
    -moz-border-radius-bottomright: 0;
    border-bottom-right-radius: 0;
    margin: 0;
		margin-left: 10px;
}


.right:hover { border-left: solid 1px #999 }
.right {
    -webkit-border-top-left-radius: 0;
    -moz-border-radius-topleft: 0;
    border-top-left-radius: 0;
    -webkit-border-bottom-left-radius: 0;
    -moz-border-radius-bottomleft: 0;
    border-bottom-left-radius: 0;
    border-left: solid 1px #f3f3f3;
    border-left: solid 1px rgba(255, 255, 255, 0);
}

.up {
    background: url(../image/arrows.png)  3px -136px no-repeat #f3f3f3;
}
.down {
    background: url(../image/arrows.png)  3px -171px no-repeat #f3f3f3;
}

#cellML {
    background: url(../image/CellML_Logo.svg)  no-repeat center center / contain;
	height: 100px;
}
#bioModels {
    background: url(../image/BioModels_Database_logo_2014.png)  no-repeat center center / contain;
	height: 100px;
}
#bives {
    background: url(../image/logo-small-no-connections.svg)  no-repeat center center / contain;
	height: 100px;
}

.floatlogo {
    float: left;
	width: 150px;
    height: 75px;
    margin: 10px; 
}



/* MENU */
#menu {
	 text-align: center 
}

#menu li{
	display: table-cell;
	padding: 20px;
	width: 75px;
	cursor: pointer; cursor: hand; 
}

.pictureMenu {
	display: block;
	width: 100px;
}

/* BIVES TOOL */

.bives-insert {
    color: #01df01;
}
.bives-delete {
    color: #ff4000;
}
.bives-attr {
    font-style: italic;
    font-weight: bold;
}
.bives-suppl {
    color: #a4a4a4;
}
.bives-update {
    color: #dfa601;
}
.bives-move {
    color: #014adf;
}

/* BOXPLOTS */
.box {
  font: 10px sans-serif;
}





.box line,
.box rect,
.box circle {
  fill: steelblue;
  stroke: #000;
  stroke-width: 1px;
}

.box .center {
  stroke-dasharray: 3,3;
}

.box .outlier {
  fill: none;
  stroke: #000;
}

.axis {
  font: 12px sans-serif;
}

/* INFO-BUTTON */
#infoButton{
	position: absolute;
	top: 20px;
	right: 20px;
}

.smallInfo{
  background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 60;
  -moz-border-radius: 60;
  border-radius: 60px;
  -webkit-box-shadow: 0px 1px 3px #666666;
  -moz-box-shadow: 0px 1px 3px #666666;
  box-shadow: 0px 1px 3px #666666;
  font-family: Georgia;
  color: #ffffff;
  text-decoration: none;
}

#infoButton {
  background: #3498db;
  background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
  background-image: -moz-linear-gradient(top, #3498db, #2980b9);
  background-image: -ms-linear-gradient(top, #3498db, #2980b9);
  background-image: -o-linear-gradient(top, #3498db, #2980b9);
  background-image: linear-gradient(to bottom, #3498db, #2980b9);
  -webkit-border-radius: 60;
  -moz-border-radius: 60;
  border-radius: 60px;
  -webkit-box-shadow: 0px 1px 3px #666666;
  -moz-box-shadow: 0px 1px 3px #666666;
  box-shadow: 0px 1px 3px #666666;
  font-family: Georgia;
  color: #ffffff;
  font-size: 25px;
  padding: 20px 20px 20px 20px;
  text-decoration: none;
}

.infoButton:hover {
  background: #3cb0fd;
  background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
  background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
  background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
  text-decoration: none;
}

/* LOG-SCALE SWITCH */
    .onoffswitch {
        position: relative; width: 90px;
        -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
    }
    .onoffswitch-checkbox {
        display: none;
    }
    .onoffswitch-label {
        display: block; overflow: hidden; cursor: pointer;
        border: 2px solid #999999; border-radius: 8px;
    }
    .onoffswitch-inner {
        display: block; width: 200%; margin-left: -100%;
        transition: margin 0.3s ease-in 0s;
    }
    .onoffswitch-inner:before, .onoffswitch-inner:after {
        display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
        font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
        box-sizing: border-box;
    }
    .onoffswitch-inner:before {
        content: "log";
        padding-left: 10px;
        background-color: #34A7C1; color: #FFFFFF;
    }
    .onoffswitch-inner:after {
        content: "normal";
        padding-right: 10px;
        background-color: #EEEEEE; color: #999999;
        text-align: right;
    }
    .onoffswitch-switch {
        display: block; width: 18px; margin: 6px;
        background: #FFFFFF;
        position: absolute; top: 0; bottom: 0;
        right: 56px;
        border: 2px solid #999999; border-radius: 8px;
        transition: all 0.3s ease-in 0s; 
    }
    .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
        margin-left: 0;
    }
    .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
        right: 0px; 
    }

/* INFOBOX */
.infoBox{
	position: absolute;
	background-color: gray;
	width: 300px;
	transform: translate(0%, -50%);
}

#smallInfoTimespan,
#smallInfoDataset,
#smallInfoDonut
{
	margin-left: 5px;
	margin-bottom: 5px;
}

#donutButton
{
	position: relative;
	left: 500px;
	top: 60px;
	display: none;
}

#donutBox,
#datasetBox,
#timeSpanBox,
#heatBox,
#box1Box,
#box2Box
{
	color: white;
}

#heatButton{
	position: relative;
	left: 625px;
	display: none;
}


#box1Button{
	position: relative;
	left: 650px;
	display: none;
}

#box2Button{
	position: relative;
	left: 650px;
	display: none;
}
#bivesResult td
{
	color: black;
}
#bivesResult tr:nth-child(even) {background: #e6f2ff}
#bivesResult tr:nth-child(odd) {background: #fff}
#bivesResult th,
#bivesResult td.highlighttd
{
	color: white;
	background-color: #004A99;
}
#bivesResult .attr
{
	color: #004A99;
}
#bivesResult .delete
{
	color: #ff4141;
}
#bivesResult .insert
{
	color: #31c149;
}
#bivesResult .modified
{
	color: #db8838;
}
#bivesResult td, 
#bivesResult th
{
	padding: 5px;
}

.bivesNavi {
	margin-top: 10px;
	display: block;
}

.naviTab.active {
    background-color: #bfdfff;
}

.naviTab {
    padding: 5px;
    border: 1px solid #29AAE1;
	border-top: 3px solid #004A99;
    font-weight: bold;
    margin-bottom: 20px;
    cursor: pointer;
	margin-left: 3px;
	margin-bottom: 3px;
}

.bivesContent{
	display: none;
}

#bivesReport{
	display: block;
}

#generalStatsTable tr:nth-child(even) {background: #f5f5f5}
#generalStatsTable tr > td:first-child {font-weight: bold}


.btn-changes-on,
.btn-changes-off
{
	cursor: pointer;
	width: 100px;
	height: 20px;
	text-align: center;
	text-shadow: 0 1px 2px rgba(0, 0, 0, 0.25);
	border: 0;
	color: white;
}
.btn-changes-on
{
	background: #578fc8;
}
.btn-changes-off
{
	background: #dfdfdf;
}




#choiceChartChartProperties
{
	font-size: 11px;
}
.line {
	fill: none;
	stroke-width: 1.5px;
}

#feedback a {
	position: absolute;
	top: 340px;
    display: block;
    width: 32px;
    height: 91px;
    background: no-repeat scroll center #EEE;
    background-image: url('../image/feedback.png');
    border: 2px dashed #555;
    border-radius: 5px;
    border-left: none;
    border-bottom-left-radius: 0;
    border-top-left-radius: 0;
    text-decoration: none;
    color: #c00;
    font-weight: bold;
    font-size: 1.2em;
}

#feedback  a:hover{
	background-color: #c00;
	background-image: url('../image/feedback-highlight.png');
}

#feedback{
	float: left;
}

#choice{
	margin-left: 40px;
	float: right;
}

.title, .buttons, .choiceSwitches, #datasetFilter{
	margin-left: 70px;
}

#choiceChartChartChanges, #choiceChartChartProperties{
	margin-left: -40px;
}

.bivesButton, #loading, .bivesNavi{
	display: none;
}

.legend {
	font-size: 12px;
}

.legendrect {
	stroke-width: 2;
}

#scaleHeatmap{
	float: left;
}

.menuInfoButton{
	width: 25px;
}

.tooltip{
	position: absolute;
}

#donutTip{
	width: 190px;
	top: 400px;
	left: 225px;
	text-align: center;
}

#heatTip{
	width: 290px;
	top: 190px;
	*left: 235px;
	text-align: center;
}

#heatTip > span{
	color: white;
}

.tooltip > span{
	word-wrap: break-word;
	word-break: break-all;
}

#download{
	display: none;
}

